# kakoune

./: .gitignore  CMakeLists.txt  TODO  conanfile.txt  install.sh  kakrc  notes.txt
colors/: default.kak  kaleidoscope-dark.kak
doc/pages/: commands.asciidoc  highlighters.asciidoc
include/kakoune/: remote.hh
rc/base/: lint.kak  spell.kak  x11.kak
rc/core/: formatter.kak  grep.kak  sh.kak
rc/extra/: .gitignore  chai.kak  find.kak  run.kak
rc/filetype/: dart.kak  dockerfile.kak  python.kak  sh.kak
src/: alias_registry.cc  assert.cc  backtrace.cc  buffer.cc  buffer_manager.cc  buffer_utils.cc  changes.cc  client.cc  client.hh  client_manager.cc  color.cc  command_manager.cc  commands.cc  completion.cc  context.cc  display_buffer.cc  env_vars.cc  event_manager.cc  exception.cc  face_registry.cc  file.cc  hash.cc  hash_map.cc  highlighter.cc  highlighter_group.cc  highlighters.cc  hook_manager.cc  hook_manager.hh  input_handler.cc  insert_completer.cc  json_ui.cc  json_ui.hh  keymap_manager.cc  keys.cc  line_modification.cc  main.cc  memory.cc  ncurses_ui.cc  ncurses_ui.hh  normal.cc  (+22 more)
test/script/: align.test.chai  buffer.out  buffer.test.chai  command.test.chai  exec.test.chai  func.test.chai  hello.chai  hooks.test.chai  lib.chai  options.chai  options.test.chai  run  run.chai  run.kak  send-keys.out  send-keys.test.chai  start.kak  values.test.chai
unittest/: CMakeLists.txt  test_ncurses.cpp  test_remote.cpp
